workspaces/diff-engine/tests/snapshots/e2e_scenarios__scenario_29__results.snap
---
source: workspaces/diff-engine/tests/e2e-scenarios.rs
expression: results
---
[
    UnmatchedResponseBodyShape(
        UnmatchedResponseBodyShape {
            interaction_trail: InteractionTrail {
                path: [
                    ResponseBody {
                        content_type: "application/json",
                        status_code: 200,
                    },
                ],
            },
            requests_trail: SpecResponseBody(
                SpecResponseBody {
                    response_id: "response_1",
                },
            ),
            shape_diff_result: UnspecifiedShape {
                json_trail: JsonTrail {
                    path: [
                        JsonObjectKey {
                            key: "location",
                        },
                        JsonObjectKey {
                            key: "principality",
                        },
                        JsonObjectKey {
                            key: "array",
                        },
                    ],
                    normalized: [
                        JsonObjectKey {
                            key: "location",
                        },
                        JsonObjectKey {
                            key: "principality",
                        },
                        JsonObjectKey {
                            key: "array",
                        },
                    ],
                },
                shape_trail: ShapeTrail {
                    root_shape_id: "shape_10",
                    path: [
                        ObjectFieldTrail {
                            field_id: "field_7",
                            field_shape_id: "shape_9",
                        },
                        ObjectFieldTrail {
                            field_id: "field_6",
                            field_shape_id: "shape_8",
                        },
                    ],
                },
            },
        },
    ),
]
