workspaces/diff-engine/tests/snapshots/e2e_scenarios__scenario_29__shape_choice_mapping_json.snap
---
source: workspaces/diff-engine/tests/e2e-scenarios.rs
expression: "&spec_projection.shape().to_choice_mapping()"
---
{
  "shape_10": [
    {
      "type": "Object",
      "shapeId": "shape_10",
      "jsonType": "Object",
      "fields": [
        {
          "name": "location",
          "fieldId": "field_7",
          "shapeId": "shape_9"
        }
      ]
    }
  ],
  "shape_11": [
    {
      "type": "Primitive",
      "shapeId": "shape_11",
      "jsonType": "String"
    }
  ],
  "shape_12": [
    {
      "type": "Object",
      "shapeId": "shape_12",
      "jsonType": "Object",
      "fields": []
    }
  ],
  "shape_2": [
    {
      "type": "Primitive",
      "shapeId": "shape_2",
      "jsonType": "String"
    }
  ],
  "shape_3": [
    {
      "type": "Primitive",
      "shapeId": "shape_3",
      "jsonType": "String"
    }
  ],
  "shape_4": [
    {
      "type": "Primitive",
      "shapeId": "shape_4",
      "jsonType": "String"
    }
  ],
  "shape_5": [
    {
      "type": "Object",
      "shapeId": "shape_5",
      "jsonType": "Object",
      "fields": [
        {
          "name": "long",
          "fieldId": "field_3",
          "shapeId": "shape_4"
        },
        {
          "name": "lat",
          "fieldId": "field_2",
          "shapeId": "shape_3"
        }
      ]
    }
  ],
  "shape_6": [
    {
      "type": "Primitive",
      "shapeId": "shape_6",
      "jsonType": "Undefined"
    },
    {
      "type": "Object",
      "shapeId": "shape_5",
      "jsonType": "Object",
      "fields": [
        {
          "name": "long",
          "fieldId": "field_3",
          "shapeId": "shape_4"
        },
        {
          "name": "lat",
          "fieldId": "field_2",
          "shapeId": "shape_3"
        }
      ]
    }
  ],
  "shape_7": [
    {
      "type": "Primitive",
      "shapeId": "shape_7",
      "jsonType": "Number"
    }
  ],
  "shape_8": [
    {
      "type": "Object",
      "shapeId": "shape_8",
      "jsonType": "Object",
      "fields": [
        {
          "name": "population",
          "fieldId": "field_5",
          "shapeId": "shape_7"
        },
        {
          "name": "coordinates",
          "fieldId": "field_4",
          "shapeId": "shape_6"
        },
        {
          "name": "city",
          "fieldId": "field_1",
          "shapeId": "shape_2"
        }
      ]
    }
  ],
  "shape_9": [
    {
      "type": "Object",
      "shapeId": "shape_9",
      "jsonType": "Object",
      "fields": [
        {
          "name": "principality",
          "fieldId": "field_6",
          "shapeId": "shape_8"
        }
      ]
    }
  ]
}
