workspaces/diff-engine/tests/snapshots/e2e_scenarios__scenario_29__shape_graph.snap
---
source: workspaces/diff-engine/tests/e2e-scenarios.rs
expression: "Dot::with_config(&spec_projection.shape().graph, &[])"
---
digraph {
    0 [ label = "CoreShape(\l    CoreShapeNode(\l        \"$string\",\l        CoreShapeNodeDescriptor {\l            kind: StringKind,\l        },\l    ),\l)\l" ]
    1 [ label = "CoreShape(\l    CoreShapeNode(\l        \"$number\",\l        CoreShapeNodeDescriptor {\l            kind: NumberKind,\l        },\l    ),\l)\l" ]
    2 [ label = "CoreShape(\l    CoreShapeNode(\l        \"$boolean\",\l        CoreShapeNodeDescriptor {\l            kind: BooleanKind,\l        },\l    ),\l)\l" ]
    3 [ label = "CoreShape(\l    CoreShapeNode(\l        \"$list\",\l        CoreShapeNodeDescriptor {\l            kind: ListKind,\l        },\l    ),\l)\l" ]
    4 [ label = "ShapeParameter(\l    ShapeParameterNode(\l        \"$listItem\",\l        ShapeParameterNodeDescriptor,\l    ),\l)\l" ]
    5 [ label = "CoreShape(\l    CoreShapeNode(\l        \"$object\",\l        CoreShapeNodeDescriptor {\l            kind: ObjectKind,\l        },\l    ),\l)\l" ]
    6 [ label = "CoreShape(\l    CoreShapeNode(\l        \"$nullable\",\l        CoreShapeNodeDescriptor {\l            kind: NullableKind,\l        },\l    ),\l)\l" ]
    7 [ label = "ShapeParameter(\l    ShapeParameterNode(\l        \"$nullableInner\",\l        ShapeParameterNodeDescriptor,\l    ),\l)\l" ]
    8 [ label = "CoreShape(\l    CoreShapeNode(\l        \"$unknown\",\l        CoreShapeNodeDescriptor {\l            kind: UnknownKind,\l        },\l    ),\l)\l" ]
    9 [ label = "CoreShape(\l    CoreShapeNode(\l        \"$optional\",\l        CoreShapeNodeDescriptor {\l            kind: OptionalKind,\l        },\l    ),\l)\l" ]
    10 [ label = "ShapeParameter(\l    ShapeParameterNode(\l        \"$optionalInner\",\l        ShapeParameterNodeDescriptor,\l    ),\l)\l" ]
    11 [ label = "CoreShape(\l    CoreShapeNode(\l        \"$oneOf\",\l        CoreShapeNodeDescriptor {\l            kind: OneOfKind,\l        },\l    ),\l)\l" ]
    12 [ label = "Shape(\l    ShapeNode(\l        \"shape_11\",\l        ShapeNodeDescriptor,\l    ),\l)\l" ]
    13 [ label = "Shape(\l    ShapeNode(\l        \"shape_12\",\l        ShapeNodeDescriptor,\l    ),\l)\l" ]
    14 [ label = "Shape(\l    ShapeNode(\l        \"shape_10\",\l        ShapeNodeDescriptor,\l    ),\l)\l" ]
    15 [ label = "Shape(\l    ShapeNode(\l        \"shape_9\",\l        ShapeNodeDescriptor,\l    ),\l)\l" ]
    16 [ label = "Shape(\l    ShapeNode(\l        \"shape_8\",\l        ShapeNodeDescriptor,\l    ),\l)\l" ]
    17 [ label = "Shape(\l    ShapeNode(\l        \"shape_2\",\l        ShapeNodeDescriptor,\l    ),\l)\l" ]
    18 [ label = "Field(\l    FieldNode(\l        \"field_1\",\l        FieldNodeDescriptor {\l            name: \"city\",\l        },\l    ),\l)\l" ]
    19 [ label = "Shape(\l    ShapeNode(\l        \"shape_5\",\l        ShapeNodeDescriptor,\l    ),\l)\l" ]
    20 [ label = "Shape(\l    ShapeNode(\l        \"shape_3\",\l        ShapeNodeDescriptor,\l    ),\l)\l" ]
    21 [ label = "Field(\l    FieldNode(\l        \"field_2\",\l        FieldNodeDescriptor {\l            name: \"lat\",\l        },\l    ),\l)\l" ]
    22 [ label = "Shape(\l    ShapeNode(\l        \"shape_4\",\l        ShapeNodeDescriptor,\l    ),\l)\l" ]
    23 [ label = "Field(\l    FieldNode(\l        \"field_3\",\l        FieldNodeDescriptor {\l            name: \"long\",\l        },\l    ),\l)\l" ]
    24 [ label = "Shape(\l    ShapeNode(\l        \"shape_6\",\l        ShapeNodeDescriptor,\l    ),\l)\l" ]
    25 [ label = "Field(\l    FieldNode(\l        \"field_4\",\l        FieldNodeDescriptor {\l            name: \"coordinates\",\l        },\l    ),\l)\l" ]
    26 [ label = "Shape(\l    ShapeNode(\l        \"shape_7\",\l        ShapeNodeDescriptor,\l    ),\l)\l" ]
    27 [ label = "Field(\l    FieldNode(\l        \"field_5\",\l        FieldNodeDescriptor {\l            name: \"population\",\l        },\l    ),\l)\l" ]
    28 [ label = "Field(\l    FieldNode(\l        \"field_6\",\l        FieldNodeDescriptor {\l            name: \"principality\",\l        },\l    ),\l)\l" ]
    29 [ label = "Field(\l    FieldNode(\l        \"field_7\",\l        FieldNodeDescriptor {\l            name: \"location\",\l        },\l    ),\l)\l" ]
    4 -> 3 [ label = "IsParameterOf\l" ]
    7 -> 6 [ label = "IsParameterOf\l" ]
    10 -> 9 [ label = "IsParameterOf\l" ]
    12 -> 0 [ label = "IsDescendantOf\l" ]
    13 -> 5 [ label = "IsDescendantOf\l" ]
    14 -> 5 [ label = "IsDescendantOf\l" ]
    15 -> 5 [ label = "IsDescendantOf\l" ]
    16 -> 5 [ label = "IsDescendantOf\l" ]
    17 -> 0 [ label = "IsDescendantOf\l" ]
    17 -> 18 [ label = "BelongsTo\l" ]
    18 -> 16 [ label = "IsFieldOf\l" ]
    19 -> 5 [ label = "IsDescendantOf\l" ]
    20 -> 0 [ label = "IsDescendantOf\l" ]
    20 -> 21 [ label = "BelongsTo\l" ]
    21 -> 19 [ label = "IsFieldOf\l" ]
    22 -> 0 [ label = "IsDescendantOf\l" ]
    22 -> 23 [ label = "BelongsTo\l" ]
    23 -> 19 [ label = "IsFieldOf\l" ]
    24 -> 9 [ label = "IsDescendantOf\l" ]
    24 -> 25 [ label = "BelongsTo\l" ]
    25 -> 16 [ label = "IsFieldOf\l" ]
    26 -> 1 [ label = "IsDescendantOf\l" ]
    26 -> 27 [ label = "BelongsTo\l" ]
    27 -> 16 [ label = "IsFieldOf\l" ]
    16 -> 28 [ label = "BelongsTo\l" ]
    28 -> 15 [ label = "IsFieldOf\l" ]
    15 -> 29 [ label = "BelongsTo\l" ]
    29 -> 14 [ label = "IsFieldOf\l" ]
    24 -> 10 [ label = "HasBinding(\l    ShapeParameterBinding {\l        shape_id: \"shape_5\",\l    },\l)\l" ]
}

